Allow for query strings in redirects style fixes  for admin bump version

--- a/app/views/spree/admin/redirects/index.html.erb
+++ b/app/views/spree/admin/redirects/index.html.erb
@@ -43,7 +43,7 @@
 
 <div id="new_redirect_form"></div>
 
-<table class="index">
+<table class="index small-font">
   <thead>
 	<tr>
     	<th><%= sort_link @search, :old_url,  Spree.t(:old_url) %></th>
