--- a/app/views/spree/admin/redirects/index.html.erb
+++ b/app/views/spree/admin/redirects/index.html.erb
@@ -89,7 +89,7 @@
       </div>
       <div class="row">
         <div class="col-md-12">
-          <%= submit_tag Spree.t(:continue), :name => 'csv', class: "btn btn-success" %>
+          <%= submit_tag 'Upload', :name => 'csv', class: "btn btn-success" %>
         </div>
       </div>
     </div>
