Make redirects editable again

--- a/app/views/spree/admin/redirects/_form.html.erb
+++ b/app/views/spree/admin/redirects/_form.html.erb
@@ -1,24 +1,24 @@
 <div data-hook="admin_product_form_fields">
   <div class="left three columns alpha" data-hook="admin_product_form_left">
-    <%= form.field_container :old_url do %>
+    <%= form.field_container :old_url, class: ['form-group'] do %>
       <%= form.label :old_url, t('old_url') %><br />
-      <%= form.text_field :old_url, :class => 'text' %>
+      <%= form.text_field :old_url, class: 'form-control' %>
       <%= error_message_on :redirect, :old_url %>
     <% end %>
   </div>
 
   <div class="three columns">
-    <%= form.field_container :new_url do %>
+    <%= form.field_container :new_url, class: ['form-group'] do %>
       <%= form.label :new_url, t('new_url') %><br />
-      <%= form.text_field :new_url, :class => 'text' %>
+      <%= form.text_field :new_url, class: 'form-control' %>
       <%= error_message_on :redirect, :new_url %>
     <% end %>
   </div>
 
   <div class="omega three columns">
-    <%= form.field_container :http_code do %>
+    <%= form.field_container :http_code, class: ['form-group'] do %>
       <%= form.label :http_code, t('http_code') %><br />
-      <%= form.text_field :http_code, :class => 'text' %>
+      <%= form.text_field :http_code, class: 'form-control' %>
       <%= error_message_on :redirect, :http_code %>
     <% end %>
   </div>
